# caffc

./: .editorconfig  .gitignore  .plzconfig  .project  AGENTS.md  BUILD  CAFFC.md  README.md  TODO.md  caffc.g4  code.txt  compiler.md  pom.xml
.obsidian/: workspace.json
.obsidian/plugins/obsidian-plantuml/: data.json
.proxyai/checkpoints/9f61a3da-b1ad-48ee-a699-dacdc20dccdf/: be6dddfd-0719-4c1e-ad76-184aad6ca906
caffc-tests/: run-tests.sh
caffc-tests/call-test/src/: hello.caffc  other.caffc
caffc-tests/exceptions/src/: main.caffc
caffc-tests/gc-stress-test/: CMakeLists.txt
caffc-tests/gc-stress-test/src/: main.caffc
caffc-tests/hello-world-caffc/: make.sh
caffc-tests/hello-world-caffc/src/: main.caffc
caffc-tests/hello-world-native/: make.sh
caffc-tests/hello-world-native/src/: main.caffc
caffc-tests/interface-call/: make.sh
caffc-tests/interface-call/src/: icall.caffc
caffc-tests/list-folder/: CMakeLists.txt
caffc-tests/list-folder/src/: array_list.caffc  list.caffc  string_extensions.caffc
caffc-tests/multi-return/: CMakeLists.txt  make.sh
caffc-tests/multi-return/src/: main.caffc
caffc-tests/new-object/: CMakeLists.txt  make.sh
caffc-tests/new-object/src/: main.caffc
caffc-tests/new-string/src/: main.caffc
caffc-tests/object-arrays/: CMakeLists.txt  make.sh
caffc-tests/object-arrays/src/: main.caffc
caffc-tests/primitive-arrays/: CMakeLists.txt  make.sh
caffc-tests/primitive-sanity-check/: make.sh
caffc-tests/stack-dump/: CMakeLists.txt
caffc-wip-tests/src/: nbody.caffc
util/: generate-reflect-config.py
(+345 files in other folders)
